--- a/blog.html
+++ b/blog.html
@@ -23,6 +23,13 @@
   
 <div class="list-container">
 
+  <div class="body-img">
+    <a href="reconstruction.html">
+      <img src="img/recon_preview.png" alt="recon preview">
+      Reconstruction
+    </a>
+  </div>
+
   <!--<div>-->
     <!--<a href="stacked_rotations.html">Stacked Rotations</a>-->
   <!--</div>-->
