--- a/projects.html
+++ b/projects.html
@@ -23,12 +23,12 @@
 
 <div class="list-container">
 
-  <!--<div class="body-img">-->
-    <!--<a href="reconstruction.html">-->
-      <!--<img src="img/recon_preview.png" alt="recon preview">-->
-      <!--Reconstruction-->
-    <!--</a>-->
-  <!--</div>-->
+  <div class="body-img">
+    <a href="reconstruction.html">
+      <img src="img/recon_preview.png" alt="recon preview">
+      Reconstruction
+    </a>
+  </div>
 
   <!--<div class="body-img">-->
     <!--<a href="balanced_movement.html">-->
