--- a/blog.html
+++ b/blog.html
@@ -23,16 +23,16 @@
   
 <div class="list-container">
 
-  <div class="body-img">
-    <a href="reconstruction.html">
-      <img src="img/recon_preview.png" alt="recon preview">
-      Reconstruction
-    </a>
-  </div>
-
-  <!--<div>-->
-    <!--<a href="stacked_rotations.html">Stacked Rotations</a>-->
+  <!--<div class="body-img">-->
+    <!--<a href="reconstruction.html">-->
+      <!--<img src="img/recon_preview.png" alt="recon preview">-->
+      <!--Reconstruction-->
+    <!--</a>-->
   <!--</div>-->
+
+  <div>
+    <a href="stacked_rotations.html">Stacked Rotations</a>
+  </div>
   
   <!--<div>-->
     <!--<a href="allolib.html">allolib</a>-->
