--- a/projects.html
+++ b/projects.html
@@ -30,26 +30,26 @@
     </a>
   </div>
 
-  <!--<div class="body-img">-->
-    <!--<a href="balanced_movement.html">-->
-      <!--<img src="img/balmov_preview.png" alt="balmov preview">-->
-      <!--Balanced Movement-->
-    <!--</a>-->
-  <!--</div>-->
+  <div class="body-img">
+    <a href="balanced_movement.html">
+      <img src="img/balmov_preview.png" alt="balmov preview">
+      Balanced Movement
+    </a>
+  </div>
 
-  <!--<div class="body-img">-->
-    <!--<a href="ancient_stains.html">-->
-      <!--<img src="img/stains_preview.png" alt="stains preview">-->
-      <!--Ancient Stains-->
-    <!--</a>-->
-  <!--</div>-->
+  <div class="body-img">
+    <a href="ancient_stains.html">
+      <img src="img/stains_preview.png" alt="stains preview">
+      Ancient Stains
+    </a>
+  </div>
 
-  <!--<div class="body-img">-->
-    <!--<a href="spherical_flocking.html">-->
-      <!--<img src="img/flocking_preview.png" alt="flocking preview">-->
-      <!--Spherical Flocking-->
-    <!--</a>-->
-  <!--</div>-->
+  <div class="body-img">
+    <a href="spherical_flocking.html">
+      <img src="img/flocking_preview.png" alt="flocking preview">
+      Spherical Flocking
+    </a>
+  </div>
 
   <!--<div class="body-img">-->
     <!--<a href="slit_scanning.html">-->
