--- a/about.html
+++ b/about.html
@@ -24,8 +24,10 @@
 <div class="content-container">
 
   <p>Generative visual and sound</p>
-  <p>Ph.D. candidate in Media Arts and Technology, UCSB</p>
-  <p>Master's Degree in Mechanical Engineering, Seoul National University</p>
+  <p>Ph.D. candidate</p>
+  <p>Master's Degree</p>
+  <!--<p>Ph.D. candidate in Media Arts and Technology, UCSB</p>-->
+  <!--<p>Master's Degree in Mechanical Engineering, Seoul National University</p>-->
   <!--<p><a href="https://www.github.com/younkhg" target="_blank">www.github.com/younkhg</a></p>-->
   <!--<p><a href="https://www.vimeo.com/younkhg" target="_blank">www.vimeo.com/younkhg</a></p>-->
 
