--- a/blog.html
+++ b/blog.html
@@ -24,6 +24,10 @@
 <div class="list-container">
 
   <div>
+    <a href="wheels_2.html">Wheels #2</a>
+  </div>
+
+  <div>
     <a href="wheels_1.html">Wheels #1</a>
   </div>
 
