--- a/wheels_1.html
+++ b/wheels_1.html
@@ -15,6 +15,7 @@
     <div>
         <a href="index.html">Keehong Youn</a>
     </div>
+    
     <div>
         <a href="projects.html">Projects</a>&nbsp;&nbsp;|&nbsp;&nbsp;
         <a href="blog.html">Blog</a>&nbsp;&nbsp;|&nbsp;&nbsp;
@@ -28,7 +29,7 @@
     <h2>Wheels #1</h2>
 
     <p>
-        (Don't Reinvent the Wheel)
+        /* Don't Reinvent the Wheel */
     </p>
 
     <p>
