--- a/blog.html
+++ b/blog.html
@@ -22,14 +22,12 @@
 </div>
   
 <div class="list-container">
+  
+  <div><a href="wheels_3.html">Wheels #3</a></div>
 
-  <div>
-    <a href="wheels_2.html">Wheels #2</a>
-  </div>
+  <div><a href="wheels_2.html">Wheels #2</a></div>
 
-  <div>
-    <a href="wheels_1.html">Wheels #1</a>
-  </div>
+  <div><a href="wheels_1.html">Wheels #1</a></div>
 
   <div>
     <a href="stacked_rotations.html">Stacked Rotations</a>
