--- a/wheels_1.html
+++ b/wheels_1.html
@@ -28,9 +28,7 @@
 
     <h2>Wheels #1</h2>
 
-    <p>
-        /* Don't Reinvent the Wheel */
-    </p>
+    <note>(Text below are all quotes. "Don't Reinvent the Wheel.")</note>
 
     <p>
         Nake (Chap. 3) is more skeptical about formal computer models of creativity, seeing the popular concept of creativity today as "a US-American invention," one that may be considered as a <ita>means</ita> for activity, or as its <ita>goal</ita>.
@@ -43,10 +41,10 @@
     </p>
 
     <p>
-        Today, the term 'generative art' is still current within the relevant artistic community. ( ... ) Both in music and in visual art, the use of the term has now converged on work that has been produced by the activation of a set of rules <ita>and</ita> where the artist lets a computer system take over at least some of the decision-making (although, of course, the artist determines the rules).
-        <ln>( ... )</ln>
+        Today, the term 'generative art' is still current within the relevant artistic community. (...) Both in music and in visual art, the use of the term has now converged on work that has been produced by the activation of a set of rules <ita>and</ita> where the artist lets a computer system take over at least some of the decision-making (although, of course, the artist determines the rules).
+        <ln>...</ln>
         The rules define the form. Think of a fugue, or of serial music. Think of perspective, or the golden section. This is the second answer to the question of why I found generative processes artistically interesting. Generative art enables the artist to concentrate on the underlying rules themselves: the structures that define the artwork, as against the surface.
-        <ln>( ... )</ln>
+        <ln>...</ln>
         In G-art, <ita>(df.) the artwork is generated, at least in part, by some process that is not under the artist’s direct control</ita>.
         <auth>Boden and Edmonds [2]</auth>
     </p>
