change update date message

--- a/wheels_1.html
+++ b/wheels_1.html
@@ -59,7 +59,9 @@
     <bibl>[2] What is Generative Art? (2009)</bibl>
     <bibl>[3] Algorithmic Art Machines (2018)</bibl>
 
-    <updatedate>Aug. 2018</updatedate>
+    <ln>&nbsp</ln>
+    <ln>&nbsp</ln>
+    <updatedate>Webpage first created Aug. 2018</updatedate>
 
 </div>
 
