--- a/wheels_3.html
+++ b/wheels_3.html
@@ -46,7 +46,9 @@
 
     <bibl>[0] What is Generative Art? Complexity Theory as a Context fot Art Theory (2003)</bibl>
 
-    <updatedate>Aug. 2018</updatedate>
+    <ln>&nbsp</ln>
+    <ln>&nbsp</ln>
+    <updatedate>Webpage first created Aug. 2018</updatedate>
 
 </div>
 
