--- a/wheels_2.html
+++ b/wheels_2.html
@@ -31,13 +31,13 @@
     <note>(Text below are all quotes. "Don't Reinvent the Wheel.")</note>
 
     <p>
-        When we express our relationship to “the natural” through poesis, explicitly or implicitly we express our concern about <ita>control</ita>. Nature is seen as a force that must be controlled, harnessed and tamed. This belief is reflected in popular notions of nature as “the chaos”, the uncontrollable force, and is exemplified by its effects and their consequences (death).
+        When we express our relationship to "the natural" through poesis, explicitly or implicitly we express our concern about <ita>control</ita>. Nature is seen as a force that must be controlled, harnessed and tamed. This belief is reflected in popular notions of nature as "the chaos", the uncontrollable force, and is exemplified by its effects and their consequences (death).
         <ln>...</ln>
         Generative art practice focuses on the production and composition of the genotype and the media in which it produces the phenotype. When run, interpreted, or performed, the genotype produces the phenotype – the work to be experienced and the realization of the process encoded by the genotype.
         <ln></ln>
         Generative art usually involves poeisis, which suggests that it should reveal the world in ways that nature can’t – hence technology seems a possible, but not necessarily unique, vehicle to achieve this aim.
         <ln>...</ln>
-        The role of the artist in a developing a generative artwork often involves creation and manipulation of the genotype and the developmental and (pseudo) physical process systems that “unfold” it into the phenotype.
+        The role of the artist in a developing a generative artwork often involves creation and manipulation of the genotype and the developmental and (pseudo) physical process systems that "unfold" it into the phenotype.
         <ln>.</ln>
         <ln>.</ln>
         <ln>.</ln>
