--- a/about.html
+++ b/about.html
@@ -26,6 +26,7 @@
   <p>Generative visual and sound</p>
   <p>Ph.D. candidate in Media Arts and Technology, UCSB</p>
   <p>Master's Degree in Mechanical Engineering, Seoul National University</p>
+  <p>younkeehong@gmail.com</p>
   <p><a href="https://www.github.com/younkhg" target="_blank">www.github.com/younkhg</a></p>
   <p><a href="https://www.vimeo.com/younkhg" target="_blank">www.vimeo.com/younkhg</a></p>
 
