--- a/wheels_3.html
+++ b/wheels_3.html
@@ -35,7 +35,7 @@
         <ln></ln>
         The key element in generative art is then the system to which the artist cedes partial or total subsequent control.
         <ln>...</ln>
-        First, note that the term generative art is simply a reference to how the art is made, and it makes no claims as to why the art is made this way or what its content is. Second, generative art is uncoupled from any particular technology. Generative art may or may not be “high tech”. Third, a system that moves an art practice into the realm of generative art must be well defined and self-contained enough to operate autonomously.
+        First, note that the term generative art is simply a reference to how the art is made, and it makes no claims as to why the art is made this way or what its content is. Second, generative art is uncoupled from any particular technology. Generative art may or may not be "high tech". Third, a system that moves an art practice into the realm of generative art must be well defined and self-contained enough to operate autonomously.
         <ln>.</ln>
         <ln>.</ln>
         <ln>.</ln>
