--- a/blog.html
+++ b/blog.html
@@ -22,6 +22,8 @@
 </div>
   
 <div class="list-container">
+
+  <div><a href="wheels_4.html">Wheels #4</a></div>
   
   <div><a href="wheels_3.html">Wheels #3</a></div>
 
