fix typo in wheels 2

--- a/wheels_2.html
+++ b/wheels_2.html
@@ -31,7 +31,7 @@
     <note>(Text below are all quotes. "Don't Reinvent the Wheel.")</note>
 
     <p>
-        When we express our relationship to "the natural" through poesis, explicitly or implicitly we express our concern about <ita>control</ita>. Nature is seen as a force that must be controlled, harnessed and tamed. This belief is reflected in popular notions of nature as "the chaos", the uncontrollable force, and is exemplified by its effects and their consequences (death).
+        When we express our relationship to "the natural" through poiesis, explicitly or implicitly we express our concern about <ita>control</ita>. Nature is seen as a force that must be controlled, harnessed and tamed. This belief is reflected in popular notions of nature as "the chaos", the uncontrollable force, and is exemplified by its effects and their consequences (death).
         <ln>...</ln>
         Generative art practice focuses on the production and composition of the genotype and the media in which it produces the phenotype. When run, interpreted, or performed, the genotype produces the phenotype – the work to be experienced and the realization of the process encoded by the genotype.
         <ln></ln>
