--- a/about.html
+++ b/about.html
@@ -26,9 +26,9 @@
   <p>Generative visual and sound</p>
   <p>Ph.D. candidate in Media Arts and Technology, UCSB</p>
   <p>Master's Degree in Mechanical Engineering, Seoul National University</p>
-  <p>gmail -> younkeehong</p>
-  <p><a href="https://www.github.com/younkhg" target="_blank">www.github.com/younkhg</a></p>
-  <p><a href="https://www.vimeo.com/younkhg" target="_blank">www.vimeo.com/younkhg</a></p>
+  <p>gmail::younkeehong</p>
+  <p><a href="https://www.github.com/younkhg" target="_blank">github::younkhg</a></p>
+  <p><a href="https://www.vimeo.com/younkhg" target="_blank">vimeo::younkhg</a></p>
 
 </div>
 
