--- a/allosphere.html
+++ b/allosphere.html
@@ -22,6 +22,7 @@
 </div>
 
 <div class="content-container">
+    <h2>AlloSphere Research Group</h2>
   <p>I work at AlloSphere Research Group</p>
 </div>
 
