--- a/blog.html
+++ b/blog.html
@@ -23,25 +23,12 @@
   
 <div class="list-container">
 
+  <div><a href="allolib.html">allolib and AlloSystem</a></div>
+  <div><a href="allosphere.html">AlloSphere Research Group</a></div>
   <div><a href="wheels_4.html">Wheels #4</a></div>
-  
   <div><a href="wheels_3.html">Wheels #3</a></div>
-
   <div><a href="wheels_2.html">Wheels #2</a></div>
-
   <div><a href="wheels_1.html">Wheels #1</a></div>
-
-  <div>
-    <a href="stacked_rotations.html">Stacked Rotations</a>
-  </div>
-  
-  <div>
-    <a href="allolib.html">allolib</a>
-  </div>
-
-  <div>
-    <a href="allosphere.html">AlloSphere</a>
-  </div>
 
 </div>
 
