--- a/wheels_2.html
+++ b/wheels_2.html
@@ -17,7 +17,7 @@
     </div>
     
     <div>
-        <a href="projects.html">Projects</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+        <a href="works.html">Works</a>&nbsp;&nbsp;|&nbsp;&nbsp;
         <a href="blog.html">Blog</a>&nbsp;&nbsp;|&nbsp;&nbsp;
         <a href="about.html">About</a>
     </div>
