--- a/allolib.html
+++ b/allolib.html
@@ -15,7 +15,7 @@
     <a href="index.html">Keehong Youn</a>
   </div>
   <div>
-    <a href="projects.html">Projects</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+    <a href="works.html">Works</a>&nbsp;&nbsp;|&nbsp;&nbsp;
     <a href="blog.html">Blog</a>&nbsp;&nbsp;|&nbsp;&nbsp;
     <a href="about.html">About</a>
   </div>
