--- a/reconstruction.html
+++ b/reconstruction.html
@@ -15,7 +15,7 @@
     <a href="index.html">Keehong Youn</a>
   </div>
   <div>
-    <a href="projects.html">Projects</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+    <a href="works.html">Works</a>&nbsp;&nbsp;|&nbsp;&nbsp;
     <a href="blog.html">Blog</a>&nbsp;&nbsp;|&nbsp;&nbsp;
     <a href="about.html">About</a>
   </div>
@@ -25,7 +25,7 @@
   <h2>Reconstruction</h2>
   
   <p>
-  Reconstruction tries to generate virtual geographical shapes from spectrum of frequencies that are observed from static materials such as image. Established is a characteristic function that takes a spectrum and returns a procedurally generated shape. The function mostly focuses on re-interpretation of spectrum into other dimensions, units, or parameters, while also taking consideration in fractal-like nature of geographic geometries. With generated shape, a short audio visual composition is presented, utilizing different rendering styles and camera position/movement.
+  Reconstruction tries to generate virtual geographical shapes from spectrum of frequencies that are observed from static materials such as image. The characteristic function written for this work takes a spectrum and returns a procedurally generated shape. The function mostly focuses on re-interpretation of spectrum into other dimensions, units, or parameters, while also taking consideration in fractal-like nature of geographic geometries. With generated shape, a short audio visual composition is presented, utilizing different rendering styles and camera position/movement.
   </p>
 
 </div>
