add images and add scrollbar hack

--- a/balanced_movement.html
+++ b/balanced_movement.html
@@ -24,7 +24,19 @@
 <div class="content-container">
   <h2>Balanced Movement</h2>
   
-  <p>Though stochastic process, a dynamic equilibrium can be achieved. By transition between three different action states (generation, modifcation, and destruction) governed by transition probability matrix, canvas continuously changes. However, the overall chracteristic determined by the transition probability matrix is maintained.</p>  
+  <p>Though stochastic process, a dynamic equilibrium can be achieved. By transition between three different action states (generation, modifcation, and destruction) governed by transition probability matrix, canvas continuously changes. However, the overall chracteristic determined by the transition probability matrix is maintained.</p>
+
+  <div class="body-img">
+      <img src="img/balmov/balmov01.png">
+  </div>
+
+  <div class="body-img">
+      <img src="img/balmov/balmov02.png">
+  </div>
+
+  <div class="body-img">
+      <img src="img/balmov/balmov03.png">
+  </div>
 
 </div>
 
