--- a/spherical_flocking.html
+++ b/spherical_flocking.html
@@ -24,11 +24,21 @@
 <div class="content-container">
   <h2>Spherical Flocking</h2>
 
-  <p>Based on flocking rule of Craig W. Reynolds a modified rule was designed and applied to agents to simulate behavior of group of fishes underwater. Fishes are presented in shadow, for dark silhouette to give a feeling of deep see where lights only comes from above, with water ripples shape.</p>
+  <p>Flocking rules simulate behavior of fishes underwater. The scene gets rendered in full surrounding spherical viewport so that it can be projected onto the inner surface of 5-meter-radius sphere, the AlloSphere at UCSB. Positions of fishes will also spatialize the sound inside the sphere.</p>
 
-  <p>The scene gets rendered in full surrounding spherical viewport so that it can be projected into the inner surface of 5-meter-radius sphere, the AlloSphere at UCSB. Positions of fishes will also spatialize the sound inside the sphere, with help of the full 3-D spatial audio setup of the AlloSphere. All visual and sound are generated in realtime.</p>
 
-  <p><a href="http://www.allosphere.ucsb.edu">AlloSphere at MAT, UCSB</a></p>
+  <div class="body-img">
+      <img src="img/flocking/flocking01.png">
+  </div>
+ 
+  <div class="body-img">
+      <img src="img/flocking/flocking02.png">
+  </div>
+
+  <div class="body-img">
+      <img src="img/flocking/flocking03.png">
+  </div>
+
 </div>
 
 </body>
