--- a/ancient_stains.html
+++ b/ancient_stains.html
@@ -24,11 +24,19 @@
 <div class="content-container">
   <h2>Ancient Stains</h2>
 
-  <p>Diffusion and reaction of two chemicals make a dynamic pattern in space. By presenting a volume this phenomenon is happening in, an experience with space of dynamic behavior could be introduced. This work is inspired by Kinetoscopes used for storytelling in Bioshock: Infinite. A kinetoscope, a physical box with a eye hole on top, will be presented, having a screen inside on the floor of it. Having only a small hole will allow the display to be seen in intended view angle and position, overcoming the limit of 2D display in terms of spatial feeling it can give.</p>
+  <p>Reaction and Diffusion of two chemicals (Barkley Turbulance) make a dynamic 3D pattern in space and will be observed with a kinetoscope. Kinetoscope sets up limited view pose and dark surroundings so that more spatial feeling than merely looking at a monitor is possible. Pixelized visual style combined with kinetoscope structure tries to present the act of observation in limited viewpoint and low resolution.</p>
 
-  <p>The reaction and diffusion of chemicals are calculated on GPU texture with shader program. Formula used is Barkley Turbulence, a type of reaction diffusion system.</p>
-  
-  <p>Result texture is used to render 3D pixels (or voxels) in space representing the chemical density. The volume is divided into relatively large voxels, with modified transparencies for better presentation of layered structure. For the rendering of the volume, emphasized is a feeling of a situation that an object that is obviously computer graphics is actually blended into the physical world environment. In this context, the graphics will be presented in pixelized, saturated visual manner.</p>
+  <div class="body-img">
+      <img src="img/stains/stains01.png">
+  </div>
+ 
+  <div class="body-img">
+      <img src="img/stains/stains02.png">
+  </div>
+
+  <div class="body-img">
+      <img src="img/stains/stains03.png">
+  </div>
 
 </div>
 
