add allolib text

--- a/blog.html
+++ b/blog.html
@@ -25,6 +25,7 @@
 
   <div><a href="allolib.html">allolib and AlloSystem</a></div>
   <div><a href="allosphere.html">AlloSphere Research Group</a></div>
+  <div>_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _</div>
   <div><a href="wheels_4.html">Wheels #4</a></div>
   <div><a href="wheels_3.html">Wheels #3</a></div>
   <div><a href="wheels_2.html">Wheels #2</a></div>
