--- a/about.html
+++ b/about.html
@@ -27,8 +27,12 @@
   <p>Ph.D. candidate in Media Arts and Technology, UCSB</p>
   <p>Master's Degree in Mechanical Engineering, Seoul National University</p>
   <p>&#121;&#111;&#117;&#110;&#107;&#101;&#101;&#104;&#111;&#110;&#103;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;</p>
-  <p><a href="https://www.github.com/younkhg" target="_blank">github :: younkhg</a></p>
-  <p><a href="https://www.vimeo.com/younkhg" target="_blank">vimeo :: younkhg</a></p>
+  <p><a target="_blank" rel="noopener noreferrer" href="https://www.github.com/younkhg">github :: younkhg</a></p>
+  <p><a target="_blank" rel="noopener noreferrer" href="https://www.vimeo.com/younkhg" target="_blank">vimeo :: younkhg</a></p>
+
+  <div class="body-img">
+      <img src="img/about/about01.png">
+  </div>
 
 </div>
 
