--- a/allosphere.html
+++ b/allosphere.html
@@ -16,14 +16,33 @@
   </div>
   <div>
     <a href="works.html">Works</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-    <a href="blog.html">Blog</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+    <a href="other.html">Other</a>&nbsp;&nbsp;|&nbsp;&nbsp;
     <a href="about.html">About</a>
   </div>
 </div>
 
 <div class="content-container">
+
     <h2>AlloSphere Research Group</h2>
-  <p>I work at AlloSphere Research Group</p>
+
+  <div class="body-img">
+      <img src="img/arg/arg03.jpg">
+  </div>
+
+    <p>"The AlloSphere includes a three-story cube that has been insulated extensively with sound-absorbing material, making it one of the largest echo-less chambers in the world. Within the chamber are two hemispheres of 5 meter radii, made of perforated aluminum. These are opaque and acoustically transparent." (<a target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/AlloSphere">wikipedia</a>)</p>
+
+    <p>I've been working at <a target="_blank" rel="noopener noreferrer" href="http://www.allosphere.ucsb.edu/">AlloSphere Research Group</a> since 2015. I was involved in projects such as <a target="_blank" rel="noopener noreferrer" href="http://www.allosphere.ucsb.edu/html/research/temap.html">TEM/AP Visualization</a> but mostly I worked as framework developer on <a href="allolib.html">allolib</a>.</p>
+
+  <div class="body-img">
+      <img src="img/arg/arg01.jpg">
+      TEM/AP project
+  </div>
+
+  <div class="body-img">
+      <img src="img/arg/arg02.jpg">
+      (WIP) material science simulation data visualization
+  </div>
+
 </div>
 
 </body>
