--- a/allolib.html
+++ b/allolib.html
@@ -16,14 +16,14 @@
   </div>
   <div>
     <a href="works.html">Works</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-    <a href="blog.html">Blog</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+    <a href="other.html">Other</a>&nbsp;&nbsp;|&nbsp;&nbsp;
     <a href="about.html">About</a>
   </div>
 </div>
 
 <div class="content-container">
 
-  <h2>allolib and AlloSystem</h2>
+  <h2>AlloSystem and allolib</h2>
 
   <p>At AlloSphere, a C++ framework called <a target="_blank" rel="noopener noreferrer" href="https://github.com/AlloSphere-Research-Group/AlloSystem">AlloSystem</a> is used to create contents to be run in the sphere. It's graphics API is based on OpenGL 2. When I started working at AlloSphere Research Group, I wanted at least OpenGL 3.3 to utilize more modern features so I worked on a new version of the framework: <a target="_blank" rel="noopener noreferrer" href="https://github.com/AlloSphere-Research-Group/allolib">allolib</a>. Other changes include: Windows Visual Studio 2017 support, move from GLUT to GLFW for window creation, easier CMake build system, <a target="_blank" rel="noopener noreferrer" href="https://github.com/ocornut/imgui">ImGUI</a> integration, and etc..</p>
 
