--- a/other.html
+++ b/other.html
@@ -16,7 +16,7 @@
   </div>
   <div>
     <a href="works.html">Works</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-    <a href="blog.html">Blog</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+    <a href="other.html">Other</a>&nbsp;&nbsp;|&nbsp;&nbsp;
     <a href="about.html">About</a>
   </div>
 </div>
