--- a/wheels_2.html
+++ b/wheels_2.html
@@ -11,14 +11,12 @@
 <body>
 
 <div class="nav-container">
-
     <div>
         <a href="index.html">Keehong Youn</a>
     </div>
-    
     <div>
         <a href="works.html">Works</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-        <a href="blog.html">Blog</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+        <a href="other.html">Other</a>&nbsp;&nbsp;|&nbsp;&nbsp;
         <a href="about.html">About</a>
     </div>
 
