--- a/slitscan.html
+++ b/slitscan.html
@@ -18,12 +18,22 @@
   </div>
 </div>
 
-<div class="list-container">
+<div class="content-container">
+  <h2>Slitscan Interface</h2>
+
+  <p>Slitscan</p>
+
+
   <div class="body-img">
-    <a href="reconstruction.html">
-      <img src="img/recon_main.png" alt="reconstruction main image">
-      Reconstruction, 2018
-    </a>
+      <img src="img/slitscan/slitscan01.png">
+  </div>
+ 
+  <div class="body-img">
+      <img src="img/slitscan/slitscan02.png">
+  </div>
+
+  <div>
+    <iframe src="https://player.vimeo.com/video/81943945?color=ffffff&byline=0&portrait=0" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
   </div>
 
 </div>
