--- a/spherical_flocking.html
+++ b/spherical_flocking.html
@@ -12,11 +12,8 @@
 
 <div class="nav-container">
   <div>
-    <a href="index.html">Keehong Youn</a>
-  </div>
-  <div>
+    <a href="index.html">Keehong Youn</a>&nbsp;&nbsp;|&nbsp;&nbsp;
     <a href="works.html">Works</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-    <a href="other.html">Other</a>&nbsp;&nbsp;|&nbsp;&nbsp;
     <a href="about.html">About</a>
   </div>
 </div>
@@ -37,6 +34,10 @@
 
   <div class="body-img">
       <img src="img/flocking/flocking03.png">
+  </div>
+
+  <div>
+    <iframe src="https://player.vimeo.com/video/131404811?color=ffffff&byline=0&portrait=0" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
   </div>
 
 </div>
