--- a/wheels_2.html
+++ b/wheels_2.html
@@ -12,12 +12,9 @@
 
 <div class="nav-container">
     <div>
-        <a href="index.html">Keehong Youn</a>
-    </div>
-    <div>
-        <a href="works.html">Works</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-        <a href="other.html">Other</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-        <a href="about.html">About</a>
+    <a href="index.html">Keehong Youn</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+    <a href="works.html">Works</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+    <a href="about.html">About</a>
     </div>
 
 </div>
