--- a/works.html
+++ b/works.html
@@ -12,11 +12,8 @@
 
 <div class="nav-container">
   <div>
-    <a href="index.html">Keehong Youn</a>
-  </div>
-  <div>
+    <a href="index.html">Keehong Youn</a>&nbsp;&nbsp;|&nbsp;&nbsp;
     <a href="works.html">Works</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-    <a href="other.html">Other</a>&nbsp;&nbsp;|&nbsp;&nbsp;
     <a href="about.html">About</a>
   </div>
 </div>
@@ -38,6 +35,13 @@
   </div>
 
   <div class="body-img">
+    <a href="fragments.html">
+      <img src="img/frag_preview.png" alt="fragments preview">
+      Fragments
+    </a>
+  </div>
+
+  <div class="body-img">
     <a href="ancient_stains.html">
       <img src="img/stains_preview.png" alt="stains preview">
       Ancient Stains
@@ -48,6 +52,41 @@
     <a href="spherical_flocking.html">
       <img src="img/flocking_preview.png" alt="flocking preview">
       Spherical Flocking
+    </a>
+  </div>
+
+  <div class="body-img">
+    <a href="allosphere.html">
+      <img src="img/sphere_preview.png" alt="allosphere preview">
+      AlloSphere, AlloSystem and Allolib
+    </a>
+  </div>
+
+  <div class="body-img">
+    <a href="slitscan.html">
+      <img src="img/slitscan_preview.png" alt="slitscan preview">
+      Slitscan Interface
+    </a>
+  </div>
+
+  <div class="body-img">
+    <a href="amp.html">
+      <img src="img/amp_preview.png" alt="amp preview">
+      Amp
+    </a>
+  </div>
+
+  <div class="body-img">
+    <a href="elascreen.html">
+      <img src="img/elascreen_preview.png" alt="elascreen preview">
+      Elascreen Interface
+    </a>
+  </div>
+
+  <div class="body-img">
+    <a href="drumthewall.html">
+      <img src="img/drum_preview.png" alt="drum the wall preview">
+      Drum The Wall
     </a>
   </div>
 
