--- a/about.html
+++ b/about.html
@@ -12,11 +12,8 @@
 
 <div class="nav-container">
   <div>
-    <a href="index.html">Keehong Youn</a>
-  </div>
-  <div>
+    <a href="index.html">Keehong Youn</a>&nbsp;&nbsp;|&nbsp;&nbsp;
     <a href="works.html">Works</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-    <a href="other.html">Other</a>&nbsp;&nbsp;|&nbsp;&nbsp;
     <a href="about.html">About</a>
   </div>
 </div>
