--- a/amp.html
+++ b/amp.html
@@ -12,11 +12,8 @@
 
 <div class="nav-container">
   <div>
-    <a href="index.html">Keehong Youn</a>
-  </div>
-  <div>
+    <a href="index.html">Keehong Youn</a>&nbsp;&nbsp;|&nbsp;&nbsp;
     <a href="works.html">Works</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-    <a href="other.html">Other</a>&nbsp;&nbsp;|&nbsp;&nbsp;
     <a href="about.html">About</a>
   </div>
 </div>
@@ -27,6 +24,10 @@
   <p>Nowadays, digital world, especially the internet network, is often said to have some kind of power that create, generate, or make changes in the real world. However this statement might give an exaggerating notion about the digital world. When we look into the mechanism how it changes the real world, we can soon notice that it is a mere amplifier that delivers or spreads the input from the real world and give out the amplified output back to the real world.</p>
 
   <p>A waterdrop in real world falls into the digital world. In the digital world a impact of drop is repeatedly amplified and a drop of water at start becomes a flow of water in digital world. Then the amplified digital water is returned to the real world. As a powerful waterfall that could influence lot more to the real world compared to that it could have in the beginning as a tiny waterdrop.</p>
+
+  <div>
+    <iframe src="https://player.vimeo.com/video/68364214?color=ffffff&byline=0&portrait=0" width="640" height="480" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+  </div>
 
 </div>
 
