--- a/balanced_movement.html
+++ b/balanced_movement.html
@@ -12,11 +12,8 @@
 
 <div class="nav-container">
   <div>
-    <a href="index.html">Keehong Youn</a>
-  </div>
-  <div>
+    <a href="index.html">Keehong Youn</a>&nbsp;&nbsp;|&nbsp;&nbsp;
     <a href="works.html">Works</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-    <a href="other.html">Other</a>&nbsp;&nbsp;|&nbsp;&nbsp;
     <a href="about.html">About</a>
   </div>
 </div>
@@ -36,6 +33,14 @@
 
   <div class="body-img">
       <img src="img/balmov/balmov03.png">
+  </div>
+
+  <div>
+    <iframe src="https://player.vimeo.com/video/181492060?color=ffffff&byline=0&portrait=0" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+  </div>
+
+  <div>
+  <iframe src="https://player.vimeo.com/video/314418374?color=ffffff&byline=0&portrait=0" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
   </div>
 
 </div>
