make video embeds responsive

--- a/amp.html
+++ b/amp.html
@@ -26,7 +26,8 @@
   <p>A waterdrop in real world falls into the digital world. In the digital world a impact of drop is repeatedly amplified and a drop of water at start becomes a flow of water in digital world. Then the amplified digital water is returned to the real world. As a powerful waterfall that could influence lot more to the real world compared to that it could have in the beginning as a tiny waterdrop.</p>
 
   <div>
-    <iframe src="https://player.vimeo.com/video/68364214?color=ffffff&byline=0&portrait=0" width="640" height="480" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+    <div style="padding:75% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/68364214?color=ffffff&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+    <!-- <iframe src="https://player.vimeo.com/video/68364214?color=ffffff&byline=0&portrait=0" width="640" height="480" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> -->
   </div>
 
 </div>
