smaller font size for mobile

--- a/works.html
+++ b/works.html
@@ -58,7 +58,7 @@
   <div class="body-img">
     <a href="allosphere.html">
       <img src="img/sphere_preview.png" alt="allosphere preview">
-      AlloSphere, AlloSystem and Allolib
+      AlloSphere, AlloSystem, and Allolib
     </a>
   </div>
 
