--- a/reconstruction.html
+++ b/reconstruction.html
@@ -20,7 +20,7 @@
 
 <div class="content-container">
   <h2>Reconstruction</h2>
-  
+
   <p>
   Reconstruction tries to generate virtual geographical shapes from spectrum of frequencies that are observed from static materials such as image. The characteristic function written for this work takes a spectrum and returns a procedurally generated shape. The function mostly focuses on re-interpretation of spectrum into other dimensions, units, or parameters, while also taking consideration in fractal-like nature of geographic geometries. With generated shape, a short audio visual composition is presented, utilizing different rendering styles and camera position/movement.
   </p>
@@ -35,6 +35,14 @@
 
   <div class="body-img">
       <img src="img/recon/recon03.png">
+  </div>
+
+  <div class="body-img">
+      <img src="img/recon/recon04.png">
+  </div>
+
+  <div class="body-img">
+      <img src="img/recon/recon05.png">
   </div>
 
   <div>
