--- a/drumthewall.html
+++ b/drumthewall.html
@@ -21,20 +21,9 @@
 <div class="content-container">
   <h2>Drum The Wall</h2>
 
-  <p>Drum The Wall</p>
+  <p>Interactive Media Facade, 2011 Seoul DMC Culture Open.</p>
 
-
-  <div class="body-img">
-      <img src="img/drum/drum01.png">
-  </div>
- 
-  <div class="body-img">
-      <img src="img/drum/drum02.png">
-  </div>
-
-  <div class="body-img">
-      <img src="img/drum/drum03.png">
-  </div>
+  <p>Live performance data from electric drum is utilized for modifying facade image projected on a grid wall. The video below shows only part 1 (which I worked on) of the performance.</p>
 
   <div>
     <!-- <iframe src="https://player.vimeo.com/video/78271003?color=ffffff&byline=0&portrait=0" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> -->
