--- a/elascreen.html
+++ b/elascreen.html
@@ -21,19 +21,16 @@
 <div class="content-container">
   <h2>Elascreen</h2>
 
-  <p>Elascreen</p>
+  <p>ElaScreen uses a elastic screen to give user a tangible experience with natural force feedback. It quite works similar to a 2D touchpad but enables 3-dimensional input by pressing and pulling action on the screen. It can be utilized for navigation of 3-dimensional information such as CAD models, and also for implementing force feedback on information visualization.</p>
 
+  <a target="_blank" rel="noopener noreferrer" href="http://dl.acm.org/citation.cfm?id=2468590">SIGCHI2013, ElaScreen: Exploring Multi-dimensional Data using Elastic Screen</p>
 
   <div class="body-img">
       <img src="img/elascreen/elascreen01.png">
   </div>
- 
-  <div class="body-img">
-      <img src="img/elascreen/elascreen02.png">
-  </div>
 
   <div class="body-img">
-      <img src="img/elascreen/elascreen03.png">
+      <img src="img/elascreen/elascreen02.png">
   </div>
 
   <div>
