--- a/slitscan.html
+++ b/slitscan.html
@@ -21,13 +21,13 @@
 <div class="content-container">
   <h2>Slitscan Interface</h2>
 
-  <p>Slitscan</p>
+  <p>Observing the space front of a touch screen enables the touch screen to have an extra context for input. While normal touch screens only have TOUCHED/NOT_TOUCHED input variety, touch screen with multiple layered slit scanning can utilize the trajectory of fingertip. This Research was funded by Hyundai NGV.</p>
 
 
   <div class="body-img">
       <img src="img/slitscan/slitscan01.png">
   </div>
- 
+
   <div class="body-img">
       <img src="img/slitscan/slitscan02.png">
   </div>
