--- a/allosphere.html
+++ b/allosphere.html
@@ -28,9 +28,9 @@
 
     <p>"The AlloSphere includes a three-story cube that has been insulated extensively with sound-absorbing material, making it one of the largest echo-less chambers in the world. Within the chamber are two hemispheres of 5 meter radii, made of perforated aluminum. These are opaque and acoustically transparent." (<a target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/AlloSphere">wikipedia</a>)</p>
 
-    <p>I've been working at <a target="_blank" rel="noopener noreferrer" href="http://www.allosphere.ucsb.edu/">AlloSphere Research Group</a> from 2015 to 2018. I was involved in projects such as <a target="_blank" rel="noopener noreferrer" href="http://www.allosphere.ucsb.edu/html/research/temap.html">TEM/AP Visualization</a>, but mostly I worked as framework developer on AlloSystem and allolib, which were used as backend of those projects.</p>
+    <p>I've been working at <a target="_blank" rel="noopener noreferrer" href="http://www.allosphere.ucsb.edu/">AlloSphere Research Group</a> from 2015 to 2018, as a graduate student researcher. I was involved in projects such as <a target="_blank" rel="noopener noreferrer" href="http://www.allosphere.ucsb.edu/html/research/temap.html">TEM/AP Visualization</a>, but mostly I worked as framework developer on AlloSystem and allolib, which were used for those projects.</p>
 
-    <a target="_blank" rel="noopener noreferrer" href="https://github.com/AlloSphere-Research-Group/AlloSystem">AlloSystem</a> is a C++ framework providing similar but different functionalities when compared to OpenFrameworks or Cinder. AlloSystem has built-in spherical projection support that can greatly faciliate creating content for the AlloSphere. <a target="_blank" rel="noopener noreferrer" href="https://github.com/AlloSphere-Research-Group/allolib">Allolib</a> is a fork of AlloSystem recently initiated, integrating higer version of OpenGL, cleaning up build system with support for Visual Studio, <a target="_blank" rel="noopener noreferrer" href="https://github.com/ocornut/imgui">ImGUI</a> integration, and etc.
+    <a target="_blank" rel="noopener noreferrer" href="https://github.com/AlloSphere-Research-Group/AlloSystem">AlloSystem</a> is a C++ framework providing similar but different functionalities when compared to OpenFrameworks or Cinder. AlloSystem has built-in spherical projection support that can greatly faciliate creating content for the AlloSphere. <a target="_blank" rel="noopener noreferrer" href="https://github.com/AlloSphere-Research-Group/allolib">Allolib</a> is a fork of AlloSystem recently initiated, integrating higer version of OpenGL, cleaning up CMake build system with better support for Visual Studio, <a target="_blank" rel="noopener noreferrer" href="https://github.com/ocornut/imgui">Dear ImGUI</a> integration for user GUI, and etc.
 
   <div class="body-img">
       <img src="img/arg/arg01.jpg">
@@ -39,7 +39,7 @@
 
   <div class="body-img">
       <img src="img/arg/arg02.jpg">
-      (WIP) material science simulation data visualization
+      Project in progress: material science simulation data visualization
   </div>
 
 </div>
