--- a/balanced_movement.html
+++ b/balanced_movement.html
@@ -19,9 +19,9 @@
 </div>
 
 <div class="content-container">
-  <h2>Balanced Movement</h2>
-  
-  <p>Though stochastic process, a dynamic equilibrium can be achieved. By transition between three different action states (generation, modifcation, and destruction) governed by transition probability matrix, canvas continuously changes. However, the overall chracteristic determined by the transition probability matrix is maintained.</p>
+  <h2>Balanced Movement Series</h2>
+
+  <p>Though stochastic process, a dynamic equilibrium can be achieved. By transition between three different action states (generation, modifcation, and destruction) governed by transition probability matrix, canvas continuously changes. However, the overall chracteristic determined by the transition probability matrix is maintained throughout the process. Different visual styles are tested but the idea in common is generation as horizontal component, modification as vertical component, and destruction as circular and/or erasing component.</p>
 
   <div class="body-img">
       <img src="img/balmov/balmov01.png">
@@ -33,6 +33,10 @@
 
   <div class="body-img">
       <img src="img/balmov/balmov03.png">
+  </div>
+
+  <div class="body-img">
+      <img src="img/balmov/balmov04.png">
   </div>
 
   <div>
