--- a/works.html
+++ b/works.html
@@ -22,70 +22,77 @@
 
   <div class="body-img">
     <a href="reconstruction.html">
-      <img src="img/recon_preview.png" alt="recon preview">
+      <img src="img/recon_preview.png">
       Reconstruction
     </a>
   </div>
 
   <div class="body-img">
+    <a href="scivis.html">
+      <img src="img/vdv_preview.jpg">
+      Scientific Visualization of Simulation Data
+    </a>
+  </div>
+
+  <div class="body-img">
     <a href="balanced_movement.html">
-      <img src="img/balmov_preview.png" alt="balmov preview">
+      <img src="img/balmov_preview.png">
       Balanced Movement
     </a>
   </div>
 
   <div class="body-img">
     <a href="allosphere.html">
-      <img src="img/sphere_preview.png" alt="allosphere preview">
+      <img src="img/sphere_preview.png">
       AlloSphere, AlloSystem, and Allolib
     </a>
   </div>
 
   <div class="body-img">
     <a href="fragments.html">
-      <img src="img/frag_preview.png" alt="fragments preview">
+      <img src="img/frag_preview.png">
       Fragments
     </a>
   </div>
 
   <div class="body-img">
     <a href="ancient_stains.html">
-      <img src="img/stains_preview.png" alt="stains preview">
+      <img src="img/stains_preview.png">
       Ancient Stains
     </a>
   </div>
 
   <div class="body-img">
     <a href="spherical_flocking.html">
-      <img src="img/flocking_preview.png" alt="flocking preview">
+      <img src="img/flocking_preview.png">
       Spherical Flocking
     </a>
   </div>
 
   <div class="body-img">
     <a href="slitscan.html">
-      <img src="img/slitscan_preview.png" alt="slitscan preview">
+      <img src="img/slitscan_preview.png">
       Slitscan Interface
     </a>
   </div>
 
   <div class="body-img">
     <a href="amp.html">
-      <img src="img/amp_preview.png" alt="amp preview">
+      <img src="img/amp_preview.png">
       Amp
     </a>
   </div>
 
   <div class="body-img">
     <a href="elascreen.html">
-      <img src="img/elascreen_preview.png" alt="elascreen preview">
+      <img src="img/elascreen_preview.png">
       Elascreen Interface
     </a>
   </div>
 
   <div class="body-img">
     <a href="drumthewall.html">
-      <img src="img/drum_preview.png" alt="drum the wall preview">
+      <img src="img/drum_preview.png">
       Drum The Wall
     </a>
   </div>
