adding bm2 wavf

--- a/scivis.html
+++ b/scivis.html
@@ -22,6 +22,8 @@
 
     <h2>Scientific Visualization of Simulation Data</h2>
 
+    <p>Multi display visualization application on HMD VR, Full immersive projection, and desktop. Custom C++ software</p>
+
   <div class="body-img">
       <img src="img/vdv/vdv01.png">
   </div>
