--- a/works.html
+++ b/works.html
@@ -21,9 +21,16 @@
 <div class="list-container">
 
   <div class="body-img">
-    <a href="reconstruction.html">
-      <img src="img/recon_preview.png">
-      Reconstruction
+    <a href="balanced_movement2.html">
+      <img src="img/balmov2_preview.png">
+      Balanced Movement 2
+    </a>
+  </div>
+
+  <div class="body-img">
+    <a href="wavefront.html">
+      <img src="img/wavefront_preview.jpg">
+      Wavefront
     </a>
   </div>
 
@@ -35,9 +42,9 @@
   </div>
 
   <div class="body-img">
-    <a href="balanced_movement.html">
-      <img src="img/balmov_preview.png">
-      Balanced Movement
+    <a href="reconstruction.html">
+      <img src="img/recon_preview.png">
+      Reconstruction
     </a>
   </div>
 
@@ -45,6 +52,13 @@
     <a href="allosphere.html">
       <img src="img/sphere_preview.png">
       AlloSphere, AlloSystem, and Allolib
+    </a>
+  </div>
+
+  <div class="body-img">
+    <a href="balanced_movement.html">
+      <img src="img/balmov_preview.png">
+      Balanced Movement
     </a>
   </div>
 
