--- a/balanced_movement2.html
+++ b/balanced_movement2.html
@@ -19,21 +19,25 @@
 </div>
 
 <div class="content-container">
-  <h2>Balanced Movement</h2>
+  <h2>Balanced Movement 2</h2>
+
+  <p>Large scale curved screen projection</p>
+  <p>Realtime audiovisual, Custom C++ software</p>
 
   <p>Though stochastic process, a dynamic equilibrium can be achieved. By transition between three different action states (generation, modifcation, and destruction) governed by transition probability matrix, canvas continuously changes. However, the overall chracteristic determined by the transition probability matrix is maintained throughout the process. Different visual styles are tested but the idea in common is generation as horizontal component, modification as vertical component, and destruction as circular and/or erasing component.</p>
 
+  <p>DOCUMENT IN PROGRESS</p>
+
   <div class="body-img">
-      <img src="img/balmov/balmov01.png">
+      <img src="img/balmov/bm3.png">
   </div>
 
   <div class="body-img">
-      <img src="img/balmov/balmov04.png">
+      <img src="img/balmov/bm_eoys_01.jpg">
   </div>
 
-  <div>
-    <!-- <iframe src="https://player.vimeo.com/video/181492060?color=ffffff&byline=0&portrait=0" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> -->
-    <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/181492060?color=ffffff&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+  <div class="body-img">
+      <img src="img/balmov/bm_eoys_02.jpg">
   </div>
 
 </div>
