--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 </div>
 
 <div class="list-container">
+    <p>I do software programming for realtime audiovisual applications</p>
   <div class="body-img">
     <a href="reconstruction.html">
       <img src="img/recon_main.png" alt="reconstruction main image">
