--- a/balanced_movement2.html
+++ b/balanced_movement2.html
@@ -24,7 +24,7 @@
   <p>Large scale curved screen projection</p>
   <p>Realtime audiovisual, Custom C++ software</p>
 
-  <p>Though stochastic process, a dynamic equilibrium can be achieved. By transition between three different action states (generation, modifcation, and destruction) governed by transition probability matrix, canvas continuously changes. However, the overall chracteristic determined by the transition probability matrix is maintained throughout the process. Different visual styles are tested but the idea in common is generation as horizontal component, modification as vertical component, and destruction as circular and/or erasing component.</p>
+  <p>This is a new iteration of the <a href="balanced_movement.html">Balanced Movement</a> with a fixed length composition. Visual style was also changed, and the software was modified to show the work on a curved projection screen.</p>
 
   <p>DOCUMENT IN PROGRESS</p>
 
