--- a/balanced_movement2.html
+++ b/balanced_movement2.html
@@ -26,7 +26,7 @@
 
   <p>This is a new iteration of the <a href="balanced_movement.html">Balanced Movement</a> with a fixed length composition. Visual style was also changed, and the software was modified to show the work on a curved projection screen.</p>
 
-  <p>DOCUMENT IN PROGRESS</p>
+  <p>DOCUMENTATION IN PROGRESS</p>
 
   <div class="body-img">
       <img src="img/balmov/bm3.png">
