--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </div>
 
 <div class="list-container">
-    <p>I do software programming for realtime audiovisual applications</p>
+    <p>I develop realtime audiovisual softwares for various environments and devices, from large scale multi-projection spaces to head-mounted displays.</p>
   <div class="body-img">
     <a href="reconstruction.html">
       <img src="img/recon_main.png" alt="reconstruction main image">
