update resume file

--- a/about.html
+++ b/about.html
@@ -20,9 +20,11 @@
 
 <div class="content-container">
 
+  <p>I develop realtime audiovisual softwares for various environments and devices, from large scale multi-projection spaces to head-mounted displays.</p>
+
   <p>Ph.D. in Media Arts and Technology, UCSB</p>
   <p>&#121;&#111;&#117;&#110;&#107;&#101;&#101;&#104;&#111;&#110;&#103;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;</p>
-  <p><a target="_blank" rel="noopener noreferrer" href="pdf/CV_Keehong_Youn.pdf">CV</a>
+  <p><a target="_blank" rel="noopener noreferrer" href="pdf/CV_Keehong_Youn.pdf">Resume</a>
   <p><a target="_blank" rel="noopener noreferrer" href="https://www.github.com/younkhg">github :: younkhg</a></p>
   <p><a target="_blank" rel="noopener noreferrer" href="https://www.vimeo.com/younkhg" target="_blank">vimeo :: younkhg</a></p>
 
