--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
 
   <p>Ph.D. in Media Arts and Technology, UCSB</p>
   <p>&#121;&#111;&#117;&#110;&#107;&#101;&#101;&#104;&#111;&#110;&#103;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;</p>
-  <p><a target="_blank" rel="noopener noreferrer" href="pdf/CV_Keehong_Youn.pdf">Resume</a>
+  <p><a target="_blank" rel="noopener noreferrer" href="pdf/Resume_Keehong_Youn.pdf">Resume</a>
   <p><a target="_blank" rel="noopener noreferrer" href="https://www.github.com/younkhg">github :: younkhg</a></p>
   <p><a target="_blank" rel="noopener noreferrer" href="https://www.vimeo.com/younkhg" target="_blank">vimeo :: younkhg</a></p>
 
