update naming for scivis

--- a/scivis.html
+++ b/scivis.html
@@ -20,7 +20,7 @@
 
 <div class="content-container">
 
-    <h2>Scientific Visualization of Simulation Data</h2>
+    <h2>Scientific Visualization of Simulation Data in VR environment</h2>
 
     <p>Multi display visualization application on HMD VR, Full immersive projection, and desktop. Custom C++ software</p>
 
