--- a/works.html
+++ b/works.html
@@ -37,7 +37,7 @@
   <div class="body-img">
     <a href="scivis.html">
       <img src="img/vdv_preview.jpg">
-      Scientific Visualization of Simulation Data
+      Scientific Visualization in VR environment
     </a>
   </div>
 
