update scivis image captions

--- a/scivis.html
+++ b/scivis.html
@@ -33,15 +33,17 @@
     <p>Work towards collaborative interaction on distributed systems. Support for displaying the datasets in the Vive HMD to use it and its controllers as a single user control device while others view the data on separate desktop/projector. This involved porting our interactive 3D pick-ray for use with VR controllers, as well as designing interaction modes for the headset. A person wearing the HMD can now more naturally rotate and understand the dataset structure, and has interactive control of the visualization and its parameters through the wireless devices.</p>
 
   <div class="body-img">
-      <img src="img/vdv/vdv02.png">
-  </div>
-
-  <div class="body-img">
       <img src="img/vdv/vdv03.jpg">
+      Application running in the immeersive AlloSphere VR environment
   </div>
 
   <div class="body-img">
       <img src="img/vdv/vdv04.png">
+      Application running on a head mounted display and a wall projection simultaneously
+  </div>
+
+  <div class="body-img">
+      <img src="img/vdv/vdv02.png">
   </div>
 
 </div>
